project: fix java 8 support